made message more clear

--- a/public/contact-me.html
+++ b/public/contact-me.html
@@ -13,7 +13,7 @@
     <h1>Wanna bring me into your circle?</h1>
     <p>email: mayaoffsetmatrix@gmail.com</p>
     <p>telegram: https://t.me/winterrdog</p>
-    <p>github: https://github.com/winterrdog ( we can use issues as a layup to a real comm! :) )</p>
+    <p>github: https://github.com/winterrdog ( we can use issues as groundwork for a real comm! :) )</p>
 
     <a href="/">Go back to Home</a>
     <div class="foot-cls">
